# rtea-encryptor

./: CMakeLists.txt  README.md
inc/: base64.h  encrypt.h  gen_iv.h
src/: base64.c  encrypt.c  gen_iv.c  main.c
